[gd_scene load_steps=30 format=2]

[ext_resource path="res://Scenes/PlayableCharacters/CharacterBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/Fill/Demon/demon-idle.png" type="Texture" id=2]
[ext_resource path="res://Script/Enemies/Demon.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/Fill/Demon/demon-attack.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/Fill/Demon/demon-idle-emission-mask.png" type="Texture" id=6]
[ext_resource path="res://Shaders/GlowShader.shader" type="Shader" id=7]
[ext_resource path="res://Scenes/Enemies/DeathAnimation.tscn" type="PackedScene" id=14]



[sub_resource type="CapsuleShape2D" id=1]
radius = 27.0
height = 34.087

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 7 )
shader_param/glow_color = Color( 0, 0.647059, 1, 1 )
shader_param/emission_texture = ExtResource( 6 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 240, 192 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 240, 192 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 240, 192 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 720, 0, 240, 192 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 960, 0, 240, 192 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 1200, 0, 240, 192 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 240, 192 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 240, 192 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 480, 0, 240, 192 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 720, 0, 240, 192 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 960, 0, 240, 192 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 1200, 0, 240, 192 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 1440, 0, 240, 192 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 1680, 0, 240, 192 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 1920, 0, 240, 192 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 2160, 0, 240, 192 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 2400, 0, 240, 192 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 52, 35 )

[sub_resource type="CapsuleShape2D" id=22]
radius = 17.0
height = 47.0

[node name="Demon" instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 8
script = ExtResource( 3 )

[node name="CollideWithPlayer" type="Area2D" parent="." index="0"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollideWithPlayer" index="0"]
position = Vector2( 1, -6.716 )
shape = SubResource( 1 )

[node name="Body" parent="." index="1"]
position = Vector2( -16, -39 )

[node name="Sprite" parent="Body" index="0"]
material = SubResource( 2 )
frames = SubResource( 20 )
animation = "idle"
frame = 3
playing = true

[node name="DeathAnimation" parent="Body" index="1" instance=ExtResource( 14 )]
visible = false
position = Vector2( 16, 31 )
scale = Vector2( 2, 2 )

[node name="FireballPos" type="Position2D" parent="Body" index="2"]
position = Vector2( -16, 5 )

[node name="FireAttack" type="Area2D" parent="Body" index="3"]
visible = false
monitoring = false
monitorable = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/FireAttack" index="0"]
position = Vector2( -57, 51 )
shape = SubResource( 21 )

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2( 0, -4.5 )
shape = SubResource( 22 )

[node name="AttackTimer" type="Timer" parent="." index="5"]
wait_time = 3.5
autostart = true
[connection signal="body_entered" from="CollideWithPlayer" to="." method="_on_CollideWithPlayer_body_entered"]
[connection signal="animation_finished" from="Body/Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="Body/Sprite" to="." method="_on_Sprite_frame_changed"]
[connection signal="body_entered" from="Body/FireAttack" to="." method="_on_FireAttack_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
